<resources>
    <string name="app_name">RecipeBook</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_favorite">Favorite</string>
    <string name="menu_setting">Setting</string>
    <string name="menu_info">About us</string>
    <string name="search">Search</string>
    <string name="menu_categories">Categories</string>
    <string name="description">Description</string>
    <string name="message">Send Message to Developer</string>
    <string name="image">image_for_fragment</string>

</resources>