<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.recipebook.presentation.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home">
        <action
        android:id="@+id/action_homeFragment_to_detailsFragment"
        app:destination="@id/nav_details"
            app:popUpTo="@id/nav_categories"    >
            <argument
                android:name="filter"
                app:argType="string" />
        </action>
    </fragment>

    <fragment
        android:id="@+id/nav_info"
        android:name="com.example.recipebook.presentation.ui.info.InfoFragment"
        android:label="@string/menu_info"
        tools:layout="@layout/fragment_info" >
    </fragment>

    <fragment
        android:id="@+id/nav_categories"
        android:name="com.example.recipebook.presentation.ui.categories.CategoriesFragment"
        android:label="@string/menu_categories"
        tools:layout="@layout/fragment_categories">
        <action
            android:id="@+id/action_categoriesFragment_to_homeFragment"
            app:destination="@id/nav_home"
            app:popUpTo="@id/nav_categories"
            app:popUpToInclusive="false" >
            <argument
                android:name="filter"
                app:argType="string" />
        </action>
    </fragment>

    <fragment
        android:id="@+id/nav_details"
        android:name="com.example.recipebook.presentation.ui.details.DetailsFragment"
        android:label="@string/description"
        tools:layout="@layout/fragment_details">
    </fragment>


    <fragment
        android:id="@+id/nav_favorite"
        android:name="com.example.recipebook.presentation.ui.favorite.FavoritesFragment"
        android:label="@string/menu_favorite"
        tools:layout="@layout/fragment_favorite">
        <action
            android:id="@+id/action_favoritesFragment_to_detailsFragment"
            app:destination="@id/nav_details"
            app:popUpTo="@id/nav_categories">
            <argument
                android:name="recipeId"
                app:argType="string" />
        </action>

    </fragment>


    <fragment
        android:id="@+id/nav_settings"
        android:name="com.example.recipebook.presentation.ui.setting.SettingFragment"
        android:label="@string/menu_setting"
        tools:layout="@layout/fragment_setting" />

    <fragment
    android:id="@+id/nav_search"
    android:name="com.example.recipebook.presentation.ui.search.SearchFragment"
    android:label="@string/menu_setting"
    tools:layout="@layout/fragment_search" >
        <action
            android:id="@+id/action_searchFragment_to_homeFragment"
            app:destination="@id/nav_home">
            <argument
                android:name="filter"
                app:argType="string" />
        </action>
    </fragment>

</navigation>